完善了对应GC的学习